fix align style

--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,7 @@ body{
 form{
     display: flex;
     flex-direction: column;
+    padding: 0 3rem;
 }
 
 
